remove package.json, bump version to 1.0.0

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "finesse",
-  "version": "1.0.0-beta.2",
+  "name": "finesse.css",
+  "version": "1.0.0",
   "authors": [
     "Evolution 7"
   ],
